Refs #2792: re-fix bugs on 640px: horizontal scroll on chart page and on navigation widget

--- a/scoreboard/theme/static/css/custom.css
+++ b/scoreboard/theme/static/css/custom.css
@@ -1276,7 +1276,12 @@ div.field span.required:after {
   }
 
   .navigation-widget .container {
-    max-width: 600px;
+    max-width: 596px;
+  }
+
+  #the-filters,
+  .legend-share {
+    width: 580px;
   }
 }
 
